// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CommandBar renders the default layout with opencode-style chrome 1`] = `
"                                                                                
                                                                                
                BROWSE                                                          
                Symbol, command, or shortcut...                                 
                                                                                
                Tickers                                                         
                › AAPL                          NASDAQ                          
                  MSFT                          NASDAQ                          
                                                                                
                Panes                                                           
                  PF                            Portfolio                       
                  CHAT                          Chat                            
                  QQ                            Quote Monitor                   
                                                                                
                Search                                                          
                  Search Ticker                 T                               
                                                                                
                Navigation                                                      
                  Help                          HELP                            
                                                                                
                                                                                
                Apple Inc.                                                      
                                                                                
                                                                                
"
`;

exports[`CommandBar renders theme prefix results in the root query 1`] = `
"                                                                                
                                                                                
                THEMES                                                          
                TH                                                              
                                                                                
                Themes                                                          
                › Amber                         current                         
                  Green Phosphor                                                
                  Cyan                                                          
                  Red Phosphor                                                  
                  Blue Phosphor                                                 
                  Purple Phosphor                                               
                  Hot Pink                                                      
                  White Phosphor                                                
                  Tokyo Night                                                   
                  Solarized Dark                                                
                  Dracula                                                       
                  Nord                                                          
                  Monokai                                                       
                  Catppuccin Mocha                                              
                                                                                
                Classic amber-on-black terminal                                 
                                                                                
                                                                                
"
`;

exports[`CommandBar renders plugin toggle state 1`] = `
"                                                                                
                                                                                
                PLUGINS                                                         
                PL                                                              
                                                                                
                Plugins                                                         
                › News                          on                              
                  Notes                         off                             
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                Latest headlines                                                
                                                                                
                                                                                
"
`;

exports[`CommandBar collapses the trailing column on narrow terminals 1`] = `
"                                          
                                          
       BROWSE                             
       Symbol, command, or shortcut...    
                                          
       Tickers                            
       › AAPL                  NASDAQ     
         MSFT                  NASDAQ     
                                          
       Panes                              
         PF                    Portfolio  
         CHAT                  Chat       
         QQ                    Quote Mon..
                                          
       Search                             
         Search Ticker         T          
                                          
       Apple Inc.                         
                                          
                                          
"
`;

exports[`CommandBar groups ticker search sections and keeps saved matches above looser provider results 1`] = `
"                                                                                
                                                                                
                SEARCH                                                          
                T appl                                                          
                Shortcut: Open APPL                                             
                Saved                                                           
                › AAPL                          NASDAQ                          
                                                                                
                Other Listings                                                  
                  APP                           NASDAQ                          
                  AMAT                          NASDAQ                          
                  AAOI                          NASDAQ                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                Apple Inc.                                                      
                                                                                
                                                                                
"
`;
